# NORM

./: .gitignore  CMakeLists.txt  NORM.pro  README.md
Example/: Example.pro  main.cpp  testmodel.cpp  testmodel.h
Example1/: main.cpp  testmodel.h
NORM/: NORM.pro  NORM_inc.pri  NORM_resource.rc  NORM_src.pri
NORM/inc/: NOrm.h  NOrmMetaModel.h  NOrmModel.h  NOrmQuerySet.h  NOrmQuerySet_p.h  NOrmWhere.h  NOrmWhere_p.h  NOrm_global.h  NOrm_p.h  QDjango.h  QDjangoMetaModel.h  QDjangoModel.h  QDjangoQuerySet_p.h  QDjangoWhere.h  QDjango_p.h
NORM/src/: NOrm.cpp  NOrmMetaModel.cpp  NOrmModel.cpp  NOrmQuerySet.cpp  NOrmWhere.cpp
doc/: 404.md  _coverpage.md  _sidebar.md
doc/_res/: prism.css
doc/quick_start/how-use/: README.md
docs/: index.html
docs/_res/: copy_code.js  emoji.js  ext_sc.js  prism.js  search.js
docs/intro/: README.md
docs/version/: README.md
example/: main.cpp  testmodel.cpp  testmodel.h
scripts/: 系统架构.bmpr
